--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,20 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.bcel-5.2.jar=libreriasdescargadas/bcel-5.2.jar
+file.reference.commons-io-2.6-javadoc.jar=C:\\Users\\dcama\\Desktop\\commons-io-2.6\\commons-io-2.6-javadoc.jar
+file.reference.commons-io-2.6-sources.jar=C:\\Users\\dcama\\Desktop\\commons-io-2.6\\commons-io-2.6-sources.jar
+file.reference.commons-io-2.6-test-sources.jar=C:\\Users\\dcama\\Desktop\\commons-io-2.6\\commons-io-2.6-test-sources.jar
+file.reference.commons-io-2.6-tests.jar=C:\\Users\\dcama\\Desktop\\commons-io-2.6\\commons-io-2.6-tests.jar
+file.reference.commons-io-2.6.jar=C:\\Users\\dcama\\Desktop\\commons-io-2.6\\commons-io-2.6.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bcel-5.2.jar}
+    ${file.reference.bcel-5.2.jar}:\
+    ${file.reference.commons-io-2.6-javadoc.jar}:\
+    ${file.reference.commons-io-2.6-sources.jar}:\
+    ${file.reference.commons-io-2.6-test-sources.jar}:\
+    ${file.reference.commons-io-2.6-tests.jar}:\
+    ${file.reference.commons-io-2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
